wayward-macros/tests/handler/fail_bad_extractor.stderr
error[E0277]: `NotAnExtractor` cannot be extracted from request metadata
 --> tests/handler/fail_bad_extractor.rs:6:27
  |
6 | async fn bad_extractor(x: NotAnExtractor, y: String) -> &'static str {
  |                           ^^^^^^^^^^^^^^ does not implement `FromRequestParts`
  |
help: the trait `FromRequestParts` is not implemented for `NotAnExtractor`
 --> tests/handler/fail_bad_extractor.rs:3:1
  |
3 | struct NotAnExtractor;
  | ^^^^^^^^^^^^^^^^^^^^^
  = note: valid extractors: `Path<P>`, `State<T>`, `Query<T>`, `HeaderMap`
help: the following other types implement trait `FromRequestParts`
 --> $WORKSPACE/wayward-server/src/extract.rs
  |
  | / impl<P> FromRequestParts for Path<P>
  | | where
  | |     P: PathSpec + ExtractPath + Send,
  | |     P::Captures: Send,
  | |______________________^ `wayward_server::Path<P>`
...
  |   impl<T: Clone + Send + Sync + 'static> FromRequestParts for State<T> {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `State<T>`
...
  |   impl<T: DeserializeOwned + Send> FromRequestParts for Query<T> {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Query<T>`
...
  |   impl FromRequestParts for http::HeaderMap {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `http::header::map::HeaderMap`
note: required by a bound in `__assert_parts_0`
 --> tests/handler/fail_bad_extractor.rs:5:1
  |
5 | #[handler]
  | ^^^^^^^^^^ required by this bound in `__assert_parts_0`
  = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)
